Fixed log directory locations

--- a/WildflyInstall/standalone/wildfly.conf
+++ b/WildflyInstall/standalone/wildfly.conf
@@ -31,9 +31,9 @@ SHUTDOWN_WAIT=60
 INSTANCE=standalone
 
 ## Location to keep the console log
-JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/wildfly/default-standalone/console.log"
+JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/default-standalone/console.log"
 
-JBOSS_PIDFILE="{{LOGS_DIR}}/wildfly/default-standalone/wildfly.pid"
+JBOSS_PIDFILE="{{LOGS_DIR}}/default-standalone/wildfly.pid"
 
 ## Custom JBOSS_OPTS
-JBOSS_OPTS="$JBOSS_OPTS -Djboss.server.log.dir=/opt/logs/wildfly -b 192.168.1.110 -bmanagement 192.168.1.110"
+JBOSS_OPTS="$JBOSS_OPTS -Djboss.server.log.dir={{LOGS_DIR}} -b 192.168.1.110 -bmanagement 192.168.1.110"
