Updated for domain functionality

--- a/WildflyInstall/domain/wildfly.conf
+++ b/WildflyInstall/domain/wildfly.conf
@@ -12,14 +12,14 @@ JBOSS_HOME="{{WILDFLY_HOME}}"
 JBOSS_USER={{WILDFLY_USER}}
 
 ## The mode WildFly should start, standalone or domain
-JBOSS_MODE=standalone
+JBOSS_MODE=domain
 
 ## Configuration for standalone mode
-JBOSS_CONFIG=standalone.xml
+# JBOSS_CONFIG=standalone.xml
 
 ## Configuration for domain mode
-# JBOSS_DOMAIN_CONFIG=domain.xml
-# JBOSS_HOST_CONFIG=host-master.xml
+JBOSS_DOMAIN_CONFIG=domain.xml
+JBOSS_HOST_CONFIG=host-master.xml
 
 ## The amount of time to wait for startup
 STARTUP_WAIT=60
@@ -28,12 +28,12 @@ STARTUP_WAIT=60
 SHUTDOWN_WAIT=60
 
 ## JBoss Instance (in case of multiple standalone installs).
-INSTANCE=standalone
+# INSTANCE=standalone
 
 ## Location to keep the console log
-JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/default-standalone/console.log"
+JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/domain/console.log"
 
-JBOSS_PIDFILE="{{LOGS_DIR}}/default-standalone/wildfly.pid"
+JBOSS_PIDFILE="{{LOGS_DIR}}/domain/wildfly.pid"
 
 ## Custom JBOSS_OPTS
 JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b 192.168.1.110 -bmanagement 192.168.1.110"
