--- a/WildflyInstall/domain_master/wildfly.conf
+++ b/WildflyInstall/domain_master/wildfly.conf
@@ -36,4 +36,4 @@ JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/domain/console.log"
 JBOSS_PIDFILE="{{LOGS_DIR}}/domain/wildfly.pid"
 
 ## Custom JBOSS_OPTS
-JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
+JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b=0.0.0.0 -bmanagement=0.0.0.0"
