--- a/standalone/templates/wildfly.conf
+++ b/standalone/templates/wildfly.conf
@@ -17,10 +17,6 @@ JBOSS_MODE=standalone
 ## Configuration for standalone mode
 JBOSS_CONFIG=standalone.xml
 
-## Configuration for domain mode
-# JBOSS_DOMAIN_CONFIG=domain.xml
-# JBOSS_HOST_CONFIG=host-master.xml
-
 ## The amount of time to wait for startup
 STARTUP_WAIT=60
 
@@ -36,5 +32,5 @@ JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/default-standalone/console.log"
 JBOSS_PIDFILE="{{LOGS_DIR}}/default-standalone/wildfly.pid"
 
 ## Custom JBOSS_OPTS
-JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}}  -bmanagement={{IP_ADDR}}"
+JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}}/default-standalone -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
 
