--- a/standalone/templates/wildfly.conf
+++ b/standalone/templates/wildfly.conf
@@ -32,5 +32,5 @@ JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/default-standalone/console.log"
 JBOSS_PIDFILE="{{LOGS_DIR}}/default-standalone/wildfly.pid"
 
 ## Custom JBOSS_OPTS
-JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}}/default-standalone -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
+JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
 
