Updated log output locations.

--- a/standalone/templates/wildfly.conf
+++ b/standalone/templates/wildfly.conf
@@ -23,13 +23,13 @@ STARTUP_WAIT=60
 ## The amount of time to wait for shutdown
 SHUTDOWN_WAIT=60
 
-## JBoss Instance (in case of multiple standalone installs).
-INSTANCE=standalone
+## Instance name
+INSTANCE="default_standalone_{{SHORT_HOSTNAME}}"
 
 ## Location to keep the console log
-JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/default-standalone/console.log"
+JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/$INSTANCE/console.log"
 
-JBOSS_PIDFILE="{{LOGS_DIR}}/default-standalone/wildfly.pid"
+JBOSS_PIDFILE="{{LOGS_DIR}}/$INSTANCE/wildfly.pid"
 
 ## Custom JBOSS_OPTS
 JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
