Updated logging output.

--- a/standalone/templates/wildfly.conf
+++ b/standalone/templates/wildfly.conf
@@ -23,13 +23,10 @@ STARTUP_WAIT=60
 ## The amount of time to wait for shutdown
 SHUTDOWN_WAIT=60
 
-## Instance name
-INSTANCE="default_standalone_{{SHORT_HOSTNAME}}"
-
 ## Location to keep the console log
-JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/$INSTANCE/console.log"
+JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/default_standalone_{{SHORT_HOSTNAME}}/console.log"
 
-JBOSS_PIDFILE="{{LOGS_DIR}}/$INSTANCE/wildfly.pid"
+JBOSS_PIDFILE="{{LOGS_DIR}}/default_standalone_{{SHORT_HOSTNAME}}/wildfly.pid"
 
 ## Custom JBOSS_OPTS
 JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
