--- a/standalone/templates/wildfly.conf
+++ b/standalone/templates/wildfly.conf
@@ -15,7 +15,7 @@ JBOSS_USER={{WILDFLY_USER}}
 JBOSS_MODE=standalone
 
 ## Configuration for standalone mode
-JBOSS_CONFIG=standalone.xml
+JBOSS_CONFIG=standalone-ha.xml
 
 ## The amount of time to wait for startup
 STARTUP_WAIT=60
@@ -24,10 +24,10 @@ STARTUP_WAIT=60
 SHUTDOWN_WAIT=60
 
 ## Location to keep the console log
-JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/default_standalone_{{SHORT_HOSTNAME}}/console.log"
+JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/standalone/console.log"
 
-JBOSS_PIDFILE="{{LOGS_DIR}}/default_standalone_{{SHORT_HOSTNAME}}/wildfly.pid"
+JBOSS_PIDFILE="{{LOGS_DIR}}/standalone/wildfly.pid"
 
 ## Custom JBOSS_OPTS
-JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
+JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}}/standalone -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
 
