Fixed duplicate log directory.

--- a/standalone/templates/wildfly.conf
+++ b/standalone/templates/wildfly.conf
@@ -29,5 +29,5 @@ JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/standalone/console.log"
 JBOSS_PIDFILE="{{LOGS_DIR}}/standalone/wildfly.pid"
 
 ## Custom JBOSS_OPTS
-JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}}/standalone -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
+JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
 
