Initial configuration for domain installation

--- a/domain/templates/wildfly.conf
+++ b/domain/templates/wildfly.conf
@@ -14,12 +14,9 @@ JBOSS_USER={{WILDFLY_USER}}
 ## The mode WildFly should start, standalone or domain
 JBOSS_MODE=domain
 
-## Configuration for standalone mode
-# JBOSS_CONFIG=standalone.xml
-
 ## Configuration for domain mode
 JBOSS_DOMAIN_CONFIG=domain.xml
-JBOSS_HOST_CONFIG=host-master.xml
+JBOSS_HOST_CONFIG=host.xml
 
 ## The amount of time to wait for startup
 STARTUP_WAIT=60
@@ -27,13 +24,11 @@ STARTUP_WAIT=60
 ## The amount of time to wait for shutdown
 SHUTDOWN_WAIT=60
 
-## JBoss Instance (in case of multiple standalone installs).
-# INSTANCE=standalone
-
 ## Location to keep the console log
 JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/domain/console.log"
 
 JBOSS_PIDFILE="{{LOGS_DIR}}/domain/wildfly.pid"
 
 ## Custom JBOSS_OPTS
-JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b=0.0.0.0 -bmanagement=0.0.0.0"
+JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
+
