--- a/domain/templates/jboss-cli-logging.properties
+++ b/domain/templates/jboss-cli-logging.properties
@@ -38,7 +38,7 @@ handler.FILE=org.jboss.logmanager.handlers.FileHandler
 handler.FILE.level=DEBUG
 handler.FILE.properties=autoFlush,fileName
 handler.FILE.autoFlush=true
-handler.FILE.fileName={{LOGS_DIR}}/jboss-cli.log
+handler.FILE.fileName={{LOGS_DIR}}/domain/jboss-cli.log
 handler.FILE.formatter=PATTERN
 
 # Formatter pattern configuration
