Changed domain logging path

--- a/domain/templates/wildfly.conf
+++ b/domain/templates/wildfly.conf
@@ -30,5 +30,5 @@ JBOSS_CONSOLE_LOG="{{LOGS_DIR}}/domain/console.log"
 JBOSS_PIDFILE="{{LOGS_DIR}}/domain/wildfly.pid"
 
 ## Custom JBOSS_OPTS
-JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}} -bmanagement={{IP_ADDR}}"
+JBOSS_OPTS="-Djboss.server.log.dir={{LOGS_DIR}} -b={{IP_ADDR}} -bmanagement={{IP_ADDR}} -Djboss.domain.log.dir={{LOGS_DIR}}/domain"
 
