--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -2,24 +2,22 @@
 # vi: set ft=ruby :
 
 Vagrant.configure(2) do |config|
-  config.vm.base_mac = "525400ada096"
+  config.vm.box = "bento/centos-7"
+  config.vm.synced_folder "..", "/vagrant"
 
-  # Server 1 definition
-  config.vm.define "server1" do |s1|
-    s1.vm.box = "centos/7"
-    s1.vm.synced_folder ".", "/vagrant", type: "rsync"
-    s1.vm.hostname = "server1.vagrant.box"
-    s1.vm.network "private_network", type: "dhcp"
-    s1.vm.provision :shell, path: "bootstrap.sh"
-  end
+  config.vm.provsion "shell", path: "bootstrap.sh"
+  config.vm.network "private_network", type: "dhcp"
 
-  # Server 2 definition
-  config.vm.define "server2" do |s2|
-    s2.vm.box = "centos/7"
-    s2.vm.synced_folder ".", "/vagrant", type: "rsync"
-    s2.vm.hostname = "server2.vagrant.box"
-    s2.vm.network "private_network", type: "dhcp"
-    s2.vm.provision :shell, path: "bootstrap.sh"
-  end
+  # Single machine hostname
+  config.vm.hostname = "wildfly1.vagrant.box"
+
+  # Multi-machine configuration
+  # config.vm.define "server1" do |s1|
+  #   s1.vm.hostname = "server1.vagrant.box"
+  # end
+  #
+  # config.vm.define "server2" do |s2|
+  #   s2.vm.hostname = "server2.vagrant.box"
+  # end
 
 end
