--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -5,7 +5,7 @@ Vagrant.configure(2) do |config|
   config.vm.box = "bento/centos-7"
   config.vm.synced_folder "..", "/vagrant"
 
-  config.vm.provsion "shell", path: "bootstrap.sh"
+  config.vm.provision "shell", path: "bootstrap.sh"
   config.vm.network "private_network", type: "dhcp"
 
   # Single machine hostname
